# AddLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  PlatformPresets.json  README.md
.github/workflows/: build-test-examples.yml  create-release.yml
cmake/: AddLib.cmake  AddLibSignWinExe.cmake.in  AddLibTestCatch2.cmake  AddLibTestGTest.cmake  ProjectConfig.cmake.in
examples/: CMakeLists.txt  README.md
examples/basic_library/: CMakeLists.txt
examples/basic_library/include/ourlib/: ourlib.hpp
examples/basic_library/src/: ourlib.cpp
examples/basic_library/test/: hello_world.cpp
include/example/: example.hpp
src/: example.cpp
test/: hello_world.cpp
